# system-config-firewall

./: Makefile  README.md  system-config-firewall-1.2.27-rhbz#565625.patch  system-config-firewall-1.2.27-rhbz#632979.patch  system-config-firewall-1.2.27-rhbz#635245.patch  system-config-firewall-1.2.27-rhbz#682391.patch  system-config-firewall-1.2.27-rhbz#711231.patch  system-config-firewall-1.2.29-rhbz#720831.patch  system-config-firewall.spec
src/: .cvsignore  Makefile.am  Makefile.in  autogen.sh  configure  configure.in
src/config/: Makefile.am  Makefile.in  org.fedoraproject.config.firewall.0.policy.in  org.fedoraproject.config.firewall.policy.in  system-config-firewall  system-config-firewall.console  system-config-firewall.desktop.in
src/po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  ku.po  lo.po  lt.po  lv.po  mai.po  mk.po  (+30 more)
src/src/: Makefile.am  Makefile.in  fw_firewalld.py  fw_functions.py  fw_gui.py  fw_parser.py  fw_services.py  gtk_label_autowrap.py  lokkit  system-config-firewall  system-config-firewall-mechanism.py  system-config-firewall-tui  system-config-firewall.gladep
